--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   },
   "devDependencies": {
     "concurrently": "^3.5.0"
+  },
+  "engines": {
+    "node": "8.11.2",
+    "npm": "5.6.x"
   }
 }
